<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RelativeLayout android:id="@+id/relative1" android:layout_width="fill_parent" android:layout_height="50dp" 
        android:background="@android:color/white">
	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"	        
	        android:contentDescription="@string/info_logo"
	        android:src="@drawable/icon" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toLeftOf="@+id/imageView1"
	        android:text="@string/hello" />
        
    </RelativeLayout>

    <RelativeLayout android:id="@+id/relativeLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	    
		<TableLayout
		    android:id="@+id/tableLayout1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true">
		
		    <TableRow
		        android:id="@+id/tableRow1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
	
				<TextView
			        android:id="@+id/textView1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/email" />

				<EditText
				    android:id="@+id/etEmail"
				    android:layout_width="100dp"
				    android:layout_height="wrap_content"
				    android:inputType="textEmailAddress" >

				    <requestFocus />
				</EditText>
		        	        	
		    </TableRow>
		
		    <TableRow
		        android:id="@+id/tableRow2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
				
				<TextView
			        android:id="@+id/textView2"			        
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/password" />

				<EditText android:inputType="textPassword"
				    android:id="@+id/etPass"
				    android:layout_width="100dp"
				    android:layout_height="wrap_content"/>
						        
		    </TableRow>
		
		</TableLayout>

		<Button
		    android:id="@+id/btnEntrar"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignRight="@+id/tableLayout1"
		    android:layout_below="@+id/tableLayout1"
		    android:text="@string/entrar" />
        
	</RelativeLayout>
    	    
</LinearLayout>
