<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

   	<RelativeLayout android:id="@+id/relative1" android:layout_width="fill_parent" android:layout_height="50dp" 
        android:background="@android:color/white">
	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"	        
	        android:contentDescription="@string/info_logo"
	        android:src="@drawable/icon" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toLeftOf="@+id/imageView1"
	        android:text="@string/hello" />
        
    </RelativeLayout>

    <ListView
        android:id="@+id/lvCompartirContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative1" >	
	</ListView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"    >
	    
	    <Button
	        android:id="@+id/btnCompartir"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"   
	        android:text="@string/btnCompartirLista" />
        
    </FrameLayout>
    
</RelativeLayout>