<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

   	<RelativeLayout android:id="@+id/relative1" android:layout_width="fill_parent" android:layout_height="50dp" 
        android:background="@android:color/white">
	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"	        
	        android:contentDescription="@string/info_logo"
	        android:src="@drawable/icon" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toLeftOf="@+id/imageView1"
	        android:text="@string/hello" />
        
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/relativeLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >

        <ImageButton
            android:id="@+id/btnNueva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="19dp"
            android:padding="0dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon" 
            android:contentDescription="@string/lblNuevaLista" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/btnNueva"
	        android:layout_marginTop="26dp"
	        android:layout_toRightOf="@+id/btnNueva"
	        android:text="@string/lblNuevaLista" />

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="match_parent"
	        android:layout_height="25dp"
	        android:layout_alignLeft="@+id/relativeLayout1"
	        android:layout_below="@+id/btnNueva"
	        android:layout_marginTop="14dp"
	        android:text="@string/lblMisListas"
	        android:gravity="center"
	        android:background="@color/resaltoEtiquea" />

	    <ListView
	        android:id="@+id/lvMisListas"
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:layout_alignLeft="@+id/btnNueva"
	        android:layout_below="@+id/textView1"
	        android:layout_marginTop="22dp" >

	    </ListView>
	    
    </RelativeLayout>	
    
 </LinearLayout>